--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,8 +2,9 @@ flask==3.0.3
 flask-socketio==5.3.6
 python-socketio==5.11.2
 eventlet==0.35.1
-speechrecognition==3.10.0
+SpeechRecognition==3.10.0
 transformers==4.40.1
-google-cloud-speech==2.24.1
+torch>=2.0.0  # Needed by transformers
 pytesseract==0.3.10
 Pillow==10.3.0
+flask-cors==4.0.0
